# routes/index.js
@@ -1,6 +1,7 @@
 import express from 'express';
 import swaggerRouter from './swagger.js';
 import journalsRoutes from './journals.js';
+import commentsRoutes from './comments.js';
 import { version } from '../server.js';
 import { HTTP } from '../util/const.js';
 
@@ -22,5 +23,6 @@ router.get('/test', (req, res) => {
 });
 
 router.use('/journals', journalsRoutes);
+router.use('/comments', commentsRoutes);
 
 export default router;
